# web-app-example

./: example.cabal
app/server/: Main.hs
lib/: Logger.hs  Widgets.hs
lib/Web/: Application.hs  RequestContext.hs  RouteHandler.hs  Routes.hs
scripts/: test-api.sh
